# aumai-connectorguard

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_connectorguard/: __init__.py  cli.py  core.py  interceptor.py  models.py  rate_limiter.py
tests/: conftest.py  test_cli.py  test_core.py  test_interceptor.py  test_models.py  test_rate_limiter.py
